<?xml version="1.0"?>
<package>
  <name>ble_scanner</name>
  <version>0.0.1</version>
  <description>The ble_scanner package</description>

  <maintainer email="mani.ghaffari@gmail.com">maani ghaffari jadidi</maintainer>


  <license> 
    Copyright (C) 2016  Maani Ghaffari Jadidi

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
